Remove single params to avoid problems with quotes. Ex. command -c "\"/bin/bash /srv/pim/tools/publish-job-to-queue.sh\"" ends up in -c '"/bin/bash /srv/pim/tools/publish-job-to-queue.sh"' which doesn't work.

--- a/templates/cronjob.yml
+++ b/templates/cronjob.yml
@@ -32,8 +32,7 @@ spec:
             - name: {{ $akeneo_fullname }}-cronjob-{{ $job.name }}
               image: {{ $cron_image }}
               imagePullPolicy: {{ $job.pullPolicy | quote }}
-              command:                
-                - {{ $job.command | quote }}                
+              command: {{ $job.command | quote }}
               volumeMounts:
               {{- if or $.Values.efs.enabled $.Values.efs.existingClaim }}                
                 {{- range $index, $val := $.Values.efs.containerMountPaths }}
