--- a/templates/cronjob.yml
+++ b/templates/cronjob.yml
@@ -1,5 +1,4 @@
 {{- $akeneo_fullname := include "akeneo.fullname" . }}
-{{- $existingClaim := .Values.efs.existingClaim | default (printf "%s-efs-pvc" (include "akeneo.fullname" .)) }}
 {{- range $job := .Values.jobs }}
 {{- $cron_image := printf "%s/%s:%s" $job.registry $job.repository $job.tag -}}
 {{- if $job.enabled }}
@@ -43,12 +42,17 @@ spec:
               {{- end }}
               resources:
 {{ toYaml $job.resources | indent 16 }}
-          volumes:          
-          {{- if $existingClaim }}
+          volumes:
+          {{- if $.Values.efs.enabled }}
           - name: efs
             persistentVolumeClaim:
-              claimName: {{ $existingClaim }}
+              claimName: {{ $akeneo_fullname }}-efs-pvc
           {{- end }}
+          {{- if and $.Values.efs.existingClaim (not $.Values.efs.enabled) }}
+          - name: efs
+            persistentVolumeClaim:
+              claimName: {{ $.Values.efs.existingClaim }}
+          {{- end }}                              
           restartPolicy: Never
 {{- end }}
 {{- end }}
