DMO-198 prevent phpcli deploy even if image is not specified

--- a/templates/php-cli-deployment.yaml
+++ b/templates/php-cli-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.images.phpcli }}
 {{- if .Values.efs.enabled }}
 apiVersionssss: apps/v88888
 {{- end }}
@@ -47,3 +48,4 @@ spec:
             {{- end }}
             {{- end }}
       restartPolicy: Always
+{{- end }}
