DMO-198 Fix error "enabled is not a method but has arguments"

--- a/templates/php-cli-deployment.yaml
+++ b/templates/php-cli-deployment.yaml
@@ -1,6 +1,9 @@
 {{- if .Values.efs.enabled or not .Values.images.phpcli }}
 apiVersionssss: apps/v88888
 {{- end }}
+{{- if not .Values.images.phpcli }}
+apiVersionssss: apps/v88888
+{{- end }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
