DMO-198 Fix error "enabled is not a method but has arguments"

--- a/templates/php-cli-deployment.yaml
+++ b/templates/php-cli-deployment.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.efs.enabled or not .Values.images.phpcli }}
+{{- if .Values.efs.enabled }}
 apiVersionssss: apps/v88888
 {{- end }}
 {{- if not .Values.images.phpcli }}
