--- a/templates/php-worker-service.yaml
+++ b/templates/php-worker-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "akeneo.fullname" . }}-service-php-cli
+  name: {{ template "akeneo.fullname" . }}-service-php-worker
   labels:
     tier: {{ template "akeneo.fullname" . }}-worker
 spec:
   selector:
-    app: {{ template "akeneo.fullname" . }}-php-cli
+    app: {{ template "akeneo.fullname" . }}-php-worker
     tier: {{ template "akeneo.fullname" . }}-worker
   ports:
   - protocol: TCP
