--- a/templates/php-cli-deployment.yaml
+++ b/templates/php-cli-deployment.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.efs.enabled }}
 apiVersionssss: apps/v88888
 {{- end }}
-{{- if not .Values.images.phpcli }}
+  {{- if .Values.phpcli.enabled }}
 apiVersionssss: apps/v88888
 {{- end }}
 apiVersion: apps/v1
