ROS-4 Fix error "<.Values.hostpath.ena...>: can't evaluate field enabled in type interface {}"

--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -1,5 +1,5 @@
 {{- $userPermissions := .Values.phpfpm.userPermissions }}
-{{- if .Values.efs.enabled }}
+{{- if or .Values.efs.enabled .Values.hostpath.enabled }}
 apiVersionssss: apps/v88888
 {{- end }}
 apiVersion: apps/v1
