--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -33,10 +33,8 @@ spec:
         {{- if .Values.hostpath.enabled }}
         - name: hostpath
           hostPath:
-            # directory location on host
             path: {{ .Values.hostpath.path }}
-            # this field is optional
-            type: Directory
+            type: {{ .Values.hostpath.type }}
         {{- end }}
       {{- if or .Values.efs.enabled .Values.efs.existingClaim .Values.hostpath.enabled }}
       {{- if .Values.phpfpm.volumePermissionEnabled }}
@@ -46,14 +44,15 @@ spec:
         command: ["/bin/sh","-c"]
         args:
         - |-
-          chown -c {{ .Values.phpfpm.userPermissions }}:{{ .Values.phpfpm.userPermissions }} /efs &&
         {{- if or .Values.efs.enabled .Values.efs.existingClaim }}
         {{- range $index, $val := .Values.efs.containerMountPaths }}
+          chown -c {{ .Values.phpfpm.userPermissions }}:{{ .Values.phpfpm.userPermissions }} /efs &&
           chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ $val }} &&
         {{- end }}
         {{- end }}
         {{- if .Values.hostpath.enabled }}
         {{- range $index, $val := .Values.hostpath.containerMountPaths }}
+          chown -c {{ .Values.phpfpm.userPermissions }}:{{ .Values.phpfpm.userPermissions }} {{ .Values.hostpath.path }} &&
           chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ $val }} &&
         {{- end }}
         {{- end }}
