--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -32,11 +32,10 @@ spec:
         {{- end }}
         {{- if .Values.hostpath.enabled }}
         - name: hostpath
-          hostPath:
-            path: {{ .Values.hostpath.path }}
-            type: {{ .Values.hostpath.type }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.hostpath.existingClaim | default (printf "%s-hostpath-pvc" (include "akeneo.fullname" .)) }}
         {{- end }}
-      {{- if or .Values.efs.enabled .Values.efs.existingClaim .Values.hostpath.enabled }}
+      {{- if or .Values.efs.enabled .Values.efs.existingClaim .Values.hostpath.enabled .Values.hostpath.existingClaim }}
       {{- if .Values.phpfpm.volumePermissionEnabled }}
       initContainers:
       - name: volume-permissions
@@ -50,7 +49,7 @@ spec:
           chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ $val }} &&
         {{- end }}
         {{- end }}
-        {{- if .Values.hostpath.enabled }}
+        {{- if or .Values.hostpath.enabled .Values.hostpath.existingClaim }}
         {{- range $index, $val := .Values.hostpath.containerMountPaths }}
           chown -c {{ .Values.phpfpm.userPermissions }}:{{ .Values.phpfpm.userPermissions }} {{ .Values.hostpath.path }} &&
           chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ $val }} &&
@@ -67,7 +66,7 @@ spec:
           name: efs
         {{- end }}
         {{- end }}
-        {{- if .Values.hostpath.enabled }}
+        {{- if or .Values.hostpath.enabled .Values.hostpath.existingClaim }}
         - mountPath: /hostpath
           name: hostpath
         {{- range $index, $val := .Values.hostpath.containerMountPaths }}
