--- a/templates/cronjob.yml
+++ b/templates/cronjob.yml
@@ -56,7 +56,7 @@ spec:
                 {{- range $index, $val := $.Values.hostpath.containerMountPaths }}
                 - mountPath: "{{ $val }}"
                   subPath: {{ (trimPrefix "/" $val) }}
-                  name: efs
+                  name: hostpath
                 {{- end }}
               {{- end }}
               resources:
