ROS-4 fix error "volumeMounts[5].name: Not found: "efs"]"

--- a/templates/httpd-deployment.yaml
+++ b/templates/httpd-deployment.yaml
@@ -75,7 +75,7 @@ spec:
           {{- range $index, $val := .Values.hostpath.containerMountPaths }}
           - mountPath: {{ $val }}
             subPath: {{ (trimPrefix "/" $val) }}
-            name: efs
+            name: hostpath
           {{- end }}
           {{- end }}
       restartPolicy: Always
