ROS-4 fix error "StorageClass.storage.k8s.io "hostpath" is invalid: provisioner: Required value"

--- a/values.yaml
+++ b/values.yaml
@@ -86,6 +86,7 @@ hostpath:
     - "/var/import"
     - "/var/export"
     - "/var/logs"
+  provisionerName: example.com/hostpath
   storageClass:
     name: hostpath
     isDefault: false
