ROS-4 fix error "StorageClass.storage.k8s.io "hostpath" is invalid: provisioner: Required value"

--- a/values.yaml
+++ b/values.yaml
@@ -79,13 +79,7 @@ hostpath:
   enabled: false
   path: /hostpath
   type: DirectoryOrCreate
-  containerMountPaths:
-    - "/srv/pim/web/media"
-    - "/srv/pim/app/file_storage"
-    - "/tmp/pim"
-    - "/var/import"
-    - "/var/export"
-    - "/var/logs"
+  containerMountPaths: {}
   provisionerName: example.com/hostpath
   storageClass:
     name: hostpath
