ROS-4 fix error "StorageClass.storage.k8s.io "hostpath" is invalid: provisioner: Required value"

--- a/templates/php-cli-deployment.yaml
+++ b/templates/php-cli-deployment.yaml
@@ -27,7 +27,7 @@ spec:
           persistentVolumeClaim:
             claimName: {{ .Values.efs.existingClaim | default (printf "%s-efs-pvc" (include "akeneo.fullname" .)) }}
         {{- end }}
-        {{- if or .Values.hostpath.enabled .Values.hostpath.existingClaim }}
+        {{- if .Values.hostpath.enabled }}
         - name: hostpath
           persistentVolumeClaim:
             claimName: {{ .Values.hostpath.existingClaim | default (printf "%s-hostpath-pvc" (include "akeneo.fullname" .)) }}
