ROS-4 fix error "StorageClass.storage.k8s.io "hostpath" is invalid: provisioner: Required value"

--- a/templates/hostpath-storageclass.yaml
+++ b/templates/hostpath-storageclass.yaml
@@ -14,15 +14,6 @@ metadata:
 {{ toYaml .Values.hostpath.annotations | indent 4 }}
 {{- end }}
 provisioner: {{ .Values.hostpath.provisionerName }}
-parameters:
-{{- if .Values.hostpath.storageClass.gidAllocate.enabled }}
-{{- with .Values.hostpath.storageClass.gidAllocate }}
-  gidAllocate: "true"
-  gidMin: "{{ .gidMin }}"
-  gidMax: "{{ .gidMax }}"
-{{- end }}
-{{- else }}
-  gidAllocate: "false"
-{{- end }}
 reclaimPolicy: {{ .Values.hostpath.storageClass.reclaimPolicy }}
+volumeBindingMode: WaitForFirstConsumer
 {{- end }}
