--- a/templates/cronjob.yml
+++ b/templates/cronjob.yml
@@ -1,4 +1,5 @@
 {{- $akeneo_fullname := include "akeneo.fullname" . }}
+{{- include "efs.list" . -}}
 {{- range $job := .Values.jobs }}
 {{- $cron_image := printf "%s/%s:%s" $job.registry $job.repository $job.tag -}}
 {{- if $job.enabled }}
@@ -45,13 +46,7 @@ spec:
               - -c
               - {{ $job.command }}
               volumeMounts:
-              {{- if or $.Values.efs.enabled $.Values.efs.existingClaim }}                
-                {{- range $index, $val := $.Values.efs.containerMountPaths }}
-                - mountPath: "{{ $val }}"
-                  subPath: {{ (trimPrefix "/" $val) }}
-                  name: efs
-                {{- end }}
-              {{- end }}
+              {{- include "efs.list.volumeMounts" $ | indent 16 }}
               {{- if or $.Values.hostpath.enabled $.Values.hostpath.existingClaim }}
                 {{- range $index, $val := $.Values.hostpath.containerMountPaths }}
                 - mountPath: "{{ $val }}"
@@ -62,15 +57,8 @@ spec:
               resources:
 {{ toYaml $job.resources | indent 16 }}
           volumes:
-          {{ if $.Values.efs.existingClaim }}
-          - name: efs
-            persistentVolumeClaim:
-              claimName: {{ $.Values.efs.existingClaim }}
-          {{ else if $.Values.efs.enabled }}
-          - name: efs
-          persistentVolumeClaim:
-            claimName: {{ $akeneo_fullname }}-efs-pvc
-          {{ else if $.Values.hostpath.existingClaim }}
+          {{- include "efs.list.volumes" $ | indent 10 }}
+          {{- if $.Values.hostpath.existingClaim }}
           - name: hostpath
             persistentVolumeClaim:
               claimName: {{ $.Values.hostpath.existingClaim }}
