--- a/templates/php-deployment.yaml
+++ b/templates/php-deployment.yaml
@@ -1,7 +1,5 @@
 {{- $userPermissions := .Values.phpfpm.userPermissions }}
-{{- if or .Values.efs.enabled .Values.hostpath.enabled }}
-apiVersionssss: apps/v88888
-{{- end }}
+{{- include "efs.list" . -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,17 +23,13 @@ spec:
       - name: {{ .Values.imagePullSecrets | quote }}
       {{- end }}
       volumes:
-        {{- if .Values.efs.enabled }}
-        - name: efs
-          persistentVolumeClaim:
-            claimName: {{ .Values.efs.existingClaim | default (printf "%s-efs-pvc" (include "akeneo.fullname" .)) }}
-        {{- end }}
+        {{- (include "efs.list.volumes" .) | indent 8 }}
         {{- if .Values.hostpath.enabled }}
         - name: hostpath
           persistentVolumeClaim:
             claimName: {{ .Values.hostpath.existingClaim | default (printf "%s-hostpath-pvc" (include "akeneo.fullname" .)) }}
         {{- end }}
-      {{- if or .Values.efs.enabled .Values.efs.existingClaim .Values.hostpath.enabled .Values.hostpath.existingClaim }}
+      {{- if or .Values.efsList.enabled .Values.hostpath.enabled .Values.hostpath.existingClaim }}
       {{- if .Values.phpfpm.volumePermissionEnabled }}
       initContainers:
       - name: volume-permissions
@@ -43,29 +37,16 @@ spec:
         command: ["/bin/sh","-c"]
         args:
         - |-
-        {{- if or .Values.efs.enabled .Values.efs.existingClaim }}
-        {{- range $index, $val := .Values.efs.containerMountPaths }}
-          chown -c {{ $userPermissions }}:{{ $userPermissions }} /efs &&
-          chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ $val }} &&
-        {{- end }}
-        {{- end }}
+        {{- (include "efs.list.initContainers.args" .) | indent 8 }}
         {{- if or .Values.hostpath.enabled .Values.hostpath.existingClaim }}
+          chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ .Values.hostpath.path }} &&
         {{- range $index, $val := .Values.hostpath.containerMountPaths }}
-          chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ $.Values.hostpath.path }} &&
           chown -c {{ $userPermissions }}:{{ $userPermissions }} {{ $val }} &&
         {{- end }}
         {{- end }}
           ls -la /srv/pim
         volumeMounts:
-        {{- if or .Values.efs.enabled .Values.efs.existingClaim }}
-        - mountPath: /efs
-          name: efs
-        {{- range $index, $val := .Values.efs.containerMountPaths }}
-        - mountPath: {{ $val }}
-          subPath: {{ (trimPrefix "/" $val) }}
-          name: efs
-        {{- end }}
-        {{- end }}
+        {{- (include "efs.list.volumeMounts" .) | indent 8 }}
         {{- if or .Values.hostpath.enabled .Values.hostpath.existingClaim }}
         - mountPath: /hostpath
           name: hostpath
@@ -102,13 +83,7 @@ spec:
           resources: {}
           {{- end }}
           volumeMounts:
-            {{- if .Values.efs.enabled }}
-            {{- range $index, $val := .Values.efs.containerMountPaths }}
-            - mountPath: {{ $val }}
-              subPath: {{ (trimPrefix "/" $val) }}
-              name: efs
-            {{- end }}
-            {{- end }}
+            {{- (include "efs.list.volumeMounts" .) | indent 12 }}
             {{- if .Values.hostpath.enabled }}
             {{- range $index, $val := .Values.hostpath.containerMountPaths }}
             - mountPath: {{ $val }}
